<resources>
    <string name="app_name">Modamania</string>
    <string name="e_mail">E-mail</string>
    <string name="signup_isim">İsim</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="password_again">Şifre Tekrar</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="giris_yap">Giriş Yap</string>
</resources>
