<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="0dp">




        <LinearLayout
            android:layout_width="381dp"
            android:layout_height="265dp"

            android:layout_marginTop="115dp"

            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:background="#000000"
                android:alpha=".2"
                android:textColorHint="#FFFFFF"/>


            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/signup_isim"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"

                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"

                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"

                android:ems="10"

                android:hint="@string/password"
                android:inputType="textPassword"

                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"

                android:ems="10"

                android:hint="@string/password_again"
                android:inputType="textPassword"

                android:textSize="14sp" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginTop="40dp"

            android:orientation="vertical">



            <Button
                android:id="@+id/buttonKayıtOl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="25dp"


                android:text="@string/kayit_ol"
                android:textAllCaps="false"

                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>