<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >







        <LinearLayout
            android:layout_width="381dp"
            android:layout_height="265dp"
            android:layout_marginTop="115dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">





            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14sp" />











        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="40dp"

          >


            <Button
                android:id="@+id/buttonGirisYap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="25dp"
                android:text="@string/giris_yap"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>







    </LinearLayout>

</LinearLayout>